#        the FastFeedback IOC Application.        
#
#  Auth: 19-May-2015, L. Piccoli         (lpiccoli)
#        18-Nov-2015, A. Babbitt         (ababbitt)
#               2017, J. Mock            (jmock)
#               2018, W. Williams        (ernesto)
#               2020, R. Reno            (rreno)
#      
#==============================================================
R3.3.0:   8-September-2020 R.Reno (rreno)
    * Add independent Energy Ref and Verniers for the longitudinal loop.
    * Add records supporting energy ref and verniers specific to SXR.
        - Left the original records for HXR the same and appended _SXR where appropriate
	  eg: FBCK:FB04:LG01:DL1VERNIER_SXR

R3.2.2:   25-August-2020 R. Reno (rreno)
    * Add second independent actuator reference for longitudinal loop. Re-enable zeroOffset()
      removed in previous release.

R3.2.1:   25-August-2020 J. Mock (jmock)
    * Remove calls to zeroOffset() in Longitudinal.cc to stop SXR loop from snapping
        to HXR value when the beam trips off
    * Also comment out _referenceOffset = 0 in ActuatorDevice.cc::clear() for same reason

R3.2.0:   25-August-2020 R.Reno (rreno)
    * Add ability to select BY1 energy source at IOC startup
    * Fixed bug where error handling code for an FCOM channel creation failure would never run
    * Target linuxRT platform on watchdog IOC (sioc-sys0-fb01)
    * Rewrote README in Markdown
    * Added UNDS BLD IOC (sioc-unds-tr02) 

R3.1.0:   05-August-2020 R.Reno (rreno)
    * Add 2 new transverse feedbacks for SXR (sioc-ltus-tr01 sioc-unds-tr01)
    * Codebase changes:
        - Build targets only linuxRT buildroot2019 (C++14 by default)
        - Got old unit tests up and running
        - Remove dynamic exception specifications. 
            Removed all instances of `throw(Exception)` and replaced `throw()` with `noexcept`

R3.0.3:   29-July-2020 R.Reno (rreno)
    * Add ability to snap state setpoints to average of last 10 calculated states for P1.
