@@ -6,4 +6,5 @@ DIRS := $(DIRS) $(filter-out $(DIRS), $(wildcard *App))
 DIRS := $(DIRS) $(filter-out $(DIRS), $(wildcard *app))
 DIRS := $(DIRS) $(filter-out $(DIRS), $(wildcard iocBoot))
 DIRS := $(DIRS) $(filter-out $(DIRS), $(wildcard iocboot))
+DIRS := $(DIRS) $(filter-out $(DIRS), $(wildcard cpuBoot))
 include $(TOP)/configure/RULES_TOP
