@@ -1,0 +1,5 @@
+TOP = ..
+include $(TOP)/configure/CONFIG
+DIRS += dev lcls
+include $(EPICS_BASE)/configure/RULES_DIRS
+
