@@ -1,0 +1,5 @@
+TOP = ../../..
+include $(TOP)/configure/CONFIG
+ARCH = linuxRT-x86_64
+TARGETS = cpuEnv.sh
+include $(TOP)/configure/RULES.cpu
